[tool.poetry]
name = "ai-causal-basics"
version = "1.0.0"
description = "A structured causal inference learning framework using pgmpy, Pyro, and DoWhy"
authors = ["Saurabh Herwadkar"]
license = "GPL-3.0"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pgmpy = "^0.1.25"
pyro-ppl = "^1.9.1"
graphviz = "^0.20.3"
dowhy = "^0.11.1"
torch = "^2.4.0"
pandas = "^2.2.0"
numpy = "^2.1.0"
networkx = "^3.4"
matplotlib = "^3.9.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
types-pyyaml = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests that require network access",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/run_*.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "SIM", "TCH", "RUF"]
ignore = ["T201", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
"src/run_*.py" = ["T201"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
